checkbox implementation + list refactor - implement checkbox prompt behavior - use a buffer to hold state for list and checkbox controls - add all color tokens to default style - create_prompt_application now accepts a pre-created buffer - rework key bindings for easier DRY between list & checkbox - made it possible to colorize the hint by providing a callable that   returns tokens

--- a/.pylintrc
+++ b/.pylintrc
@@ -131,6 +131,7 @@ disable=print-statement,
         arguments-differ,
         too-many-arguments,
         too-many-locals,
+        too-many-instance-attributes,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
